--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 ---
+const stringDev = '<dev/>';
 ---
 
-<header class="flex w-full fixed top-6 right-0 justify-center backdrop-blur-sm z-30">
-  <div class="flex items-center text-white space-x-8 md:space-x-14 py-3 px-5 rounded-full relative">
-    <a class="link" href="#">About</a>
-    <a class="link" href="#">Projects</a>
-    <a class="link" href="#">Contact</a>
-  </div>
+<header class="flex w-full fixed py-6 px-5 md:px-24 top-0 right-0 justify-between items-center backdrop-blur-sm z-30">
+  <h1 class="cursor-default font-bold text-xl md:text-2xl tracking-wide text-white">adrian <span class="text-yellow-400">{stringDev}</span></h1>
+  <a class="w-28 md:w-36 h-10 bg-slate-900 text-sm md:text-normal text-white rounded-md text-merriweather text-center pt-3 md:py-2 font-semibold lg:font-bold shadow-sm shadow-slate-200 transition-transform duration-300 hover:scale-95 hover:shadow-slate-900 hover:bg-transparent hover:backdrop-blur-sm" download href="/docs/cv.jpg">
+    Download CV
+  </a>
 </header>
