--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,6 +1,8 @@
 ---
+import Header from "../components/Header.astro";
 ---
 
-<main class="max-w-7xl min-h-screen flex flex-col gap-10 px-10 mx-auto">
+<Header />
+<main class="w-full md:max-w-7xl min-h-screen flex flex-col gap-10 px-10 mx-auto">
   <slot />
 </main>
