--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,9 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<div class="bg-gradient-to-br from-gray-900 to-purple-900 min-h-screen w-full">
-			<slot />
+			<div class="bg-pattern-desktop bg-cover bg-no-repeat min-h-screen w-full">
+				<slot />
+			</div>
 		</div>
 	</body>
 </html>
