--- a/src/components/HeroLeft.astro
+++ b/src/components/HeroLeft.astro
@@ -1,23 +1,23 @@
 ---
 ---
 
-<div class='text-center md:text-left'>
+<div class='text-center md:text-left h-fit'>
   <h2 class='font-merriweather font-semibold text-xl md:text-3xl tracking-wider text-white md:ml-2'>
     Hello! <span class='font-thin'>My name is</span>
   </h2>
   <h2 class='mt-4 font-merriweather font-bold text-4xl md:text-7xl text-white'>
     Adrian Rangel
   </h2>
-  <h3 class='mt-4 font-work font-semibold text-3xl text-white'>
-    <span class='text-blue-500 transition-colors duration-300 hover:text-yellow-500'>
+  <h3 class='mt-4 font-work font-semibold text-4xl text-white'>
+    <span>
       Web Developer
     </span>
     and <br>
-    <span class='underline decoration-yellow-400 decoration-wavy transition-colors duration-300 hover:decoration-blue-500'>
+    <span>
       JavaScript Enthusiast
     </span>
   </h3>
-  <p class="mt-4 md:leading-7 tracking-wide font-work text-[#d1d1d1] text-sm md:text-lg md:w-[520px]">
+  <p class="mb-4 mt-4 md:leading-7 tracking-wide font-work text-[#d1d1d1] text-sm md:text-lg md:w-[520px]">
     I'm a computer engineering student with a predilection for web development. Since 2022 I began to study web development in a self-taught way, developing projects and helping in communities.
   </p>
 </div>
