--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,15 @@
 ---
-import Button from "./Button.astro";
-
-const stringDev = '<dev/>';
+const stringDev = '<adr/dev>';
 ---
 
-<header class="flex w-full fixed py-6 px-5 md:px-24 top-0 right-0 justify-between items-center backdrop-blur-sm z-30">
-  <h1 class="cursor-default font-bold text-xl md:text-2xl tracking-wide text-white">adrian <span class="text-yellow-400">{stringDev}</span></h1>
-  <Button />
+<header class="w-full fixed top-0 right-0 py-6 px-8 flex items-center justify-between border-2 border-white">
+  <h1 class="mr-10 font-bold font-merriweather text-xl text-yellow-400 w-fit">
+    <a href="/">{stringDev}</a>
+  </h1>
+  <div class="flex space-x-6">
+    <a class="link" href="#">Projects</a>
+    <a class="link" href="#">Contact</a>
+    <a class="link" href="#">Download</a>
+  </div>
 </header>
 
