--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,10 +17,13 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<div class="bg-gradient-to-br from-gray-900 to-purple-900 min-h-screen w-full">
-			<div class="bg-pattern-desktop bg-cover bg-no-repeat min-h-screen w-full">
+		<div class="bg-[#0C0E10] min-h-screen w-full">
+			<div class="min-h-screen w-full">
 				<slot />
 			</div>
 		</div>
 	</body>
 </html>
+
+
+<!-- bg-gradient-to-br from-gray-900 to-purple-900 -->
