--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
+import Header from '../components/Header.svelte';
 ---
 
 <Layout title="Adrian Rangel">
-	<Header />
+	<Header client:load />
 	<main class="w-full md:max-w-7xl min-h-screen flex flex-col px-10 mx-auto">
 
 	</main>
