feat: changed header and hero component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.svelte';
+import Hero from '../components/Hero.astro';
 ---
 
 <Layout title="Adrian Rangel">
-	<Header client:load />
-	<main class="w-full md:max-w-7xl min-h-screen flex flex-col px-10 mx-auto">
-
-	</main>
+	<Hero />
 </Layout> 
 
