--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Header from '../components/Header.astro';
 export interface Props {
 	title: string;
 }
@@ -17,9 +18,12 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<div class="bg-[#0C0E10] min-h-screen w-full">
+		<div class="bg-[#0c0e0f] min-h-screen w-full">
 			<div class="min-h-screen w-full">
-				<slot />
+				<Header />
+				<main class="w-full md:max-w-7xl min-h-screen flex flex-col px-10 mx-auto">
+					<slot />
+				</main>
 			</div>
 		</div>
 	</body>
@@ -27,3 +31,4 @@ const { title } = Astro.props;
 
 
 <!-- bg-gradient-to-br from-gray-900 to-purple-900 -->
+<!-- bg-[#0C0E10]  -->
