--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,8 @@
       Adrian Rangel
     </h2>
     <p class="font-bold text-3xl text-white">Web developer, JavaScript enthusiast</p>
-    <p class="text-xl text-slate-400 md:w-[540px] mt-2 leading-7">I am a web developer who loves the JavaScript ecosystem. I seek to create software that is sustainable and provides a unique user experience.</p>
+    <p class="text-xl text-slate-400 md:w-[540px] my-3 leading-7">I am a web developer who loves the JavaScript ecosystem. I seek to create software that is sustainable and provides a unique user experience.</p>
+    <a class="w-fit p-2 text-white font-merriweather font-bold bg-opacity-5 bg-white backdrop-blur-lg drop-shadow-lg text-base lg:text-lg rounded-md duration-300 transition-all hover:scale-105 hover:bg-opacity-10 hover:shadow-sm hover:shadow-purple-300" download href="/docs/cv.jpg">Download CV</a>
   </div>
 
 </section>
@@ -21,7 +22,6 @@
   inView('#title', (info) => {
     animate(info.target, 
     {opacity:[0, 0.2, 0.4, 0.6, 0.8, 1]},
-    {duration: 2.5})
+    {duration: 2.8})
   })
-
 </script>
