--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,23 +1,20 @@
 ---
-import { skills } from "../data/skills";
+import SkillsComponents from "./SkillsComponents.astro";
 ---
 
-<section class="w-full h-[560px] flex justify-between relative mt-20">
-  
-  <div id="item" class="w-full">
+<section class="w-full h-full flex flex-col lg:flex-row justify-between mt-20">
+  <div id="item" class="w-full mb-12 md:mr-4">
     <h3 class="font-bold font-merriweather text-4xl text-white mb-3">About me</h3>
-    <p class="font-work text-slate-400 text-xl leading-7 md:w-[540px]">
+    <p class="font-work text-slate-400 text-xl leading-7 md:w-[500px]">
       I am a computer engineering student, self-taught frontend and lover of the JavaScript ecosystem.
       Passionate about code, technology and development; adaptable and persevering, curious since I can remember and always looking for new things to learn. <br><br>
       I usually develop projects that are impactful and useful, as well as small practice projects that help me to continue increasing my coding skills.
     </p>
   </div>
 
-  <div id="item" class="w-full text-left">
+  <div id="item" class="w-full text-left mt-8 md:mt-0">
     <h3 class="font-bold font-merriweather text-4xl text-white">Skills</h3>
-    <ul class="flex list-none flex-wrap gap-10 pt-4">
-
-    </ul>
+    <SkillsComponents />
   </div>
 </section>
 
