--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 ---
 
 
-<header class="w-full relative py-6 px-8 md:px-12 flex items-center justify-between border-white">
+<header class="w-full relative py-6 px-8 md:px-12 flex items-center justify-between border-white z-50">
 	<h1 class="font-bold font-merriweather text-xl text-yellow-400 w-fit">
 		<a class="transition-all duration-300 hover:bg-clip-text hover:bg-gradient-to-tl hover:from-purple-800 hover:via-purple-600 hover:to-rose-600 hover:text-transparent" href="/">{stringDev}</a>
 	</h1>
