--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,13 +2,20 @@
 import SkillsComponents from "./SkillsComponents.astro";
 ---
 
-<section class="w-full h-full flex flex-col lg:flex-row justify-between mt-20 md:mt-56 lg:mt-20">
+<section class="w-full h-full flex flex-col lg:flex-row justify-between mt-20 md:mt-56 lg:mt-48">
   <div id="item" class="w-full mb-12 md:mr-4">
     <h3 class="font-bold font-merriweather text-4xl text-white mb-3">About me</h3>
     <p class="font-work text-slate-400 text-xl leading-7 md:w-[500px]">
-      I am a computer engineering student, self-taught frontend and lover of the JavaScript ecosystem.
+      I am a 
+      <span class="text-purple-600 font-semibold">computer engineering student</span>, 
+      self-taught web developer 
+      <span class="text-purple-600 font-semibold">(i love frontend)</span> 
+      and lover of the <span class="text-purple-600 font-semibold">JavaScript ecosystem</span>.
       Passionate about code, technology and development; adaptable and persevering, curious since I can remember and always looking for new things to learn. <br><br>
-      I usually develop projects that are impactful and useful, as well as small practice projects that help me to continue increasing my coding skills.
+      I usually develop projects that are 
+      <span class="text-purple-600 font-semibold">impactful and useful</span>, as well as 
+      <span class="text-purple-600 font-semibold">small practice projects</span> 
+      that help me to continue <span class="text-purple-600 font-semibold">increasing my coding skills</span>.
     </p>
   </div>
 
