--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<div class="bg-[#0d0e0f] min-h-screen w-full">
+		<div class="bg-[#101111] min-h-screen w-full">
 			<div class="min-h-screen w-full">
 				<Header />
 				<main class="w-full md:max-w-7xl min-h-screen flex flex-col px-10 mx-auto">
@@ -29,6 +29,3 @@ const { title } = Astro.props;
 	</body>
 </html>
 
-
-<!-- bg-gradient-to-br from-gray-900 to-purple-900 -->
-<!-- bg-[#0C0E10]  -->
