feat: added blobs and animation

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,11 @@
 ---
 import HeroLeft from "./HeroLeft.astro";
 import HeroRight from "./HeroRight.astro";
+import Blob from "./Blob.astro";
 ---
 
 <section class="w-full h-full mt-7 md:mt-0 md:h-[540px] flex flex-col-reverse md:flex-col lg:flex-row md:items-center md:justify-between relative">
+  <Blob directionalProps="" />
   <HeroLeft />
   <HeroRight />
 </section>
