--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,11 +1,44 @@
 ---
-import HeroLeft from "./HeroLeft.astro";
-import HeroRight from "./HeroRight.astro";
 import Blob from "./Blob.astro";
 ---
 
-<section class="w-full h-full mt-7 md:mt-0 md:h-[540px] flex flex-col-reverse md:flex-col lg:flex-row md:items-center md:justify-between relative">
-  <Blob directionalProps="" />
-  <HeroLeft />
-  <HeroRight />
+<section class="text-white relative">
+  <Blob />
+  <Blob directionalProps="bottom-12 right-12" />
+
+  <div id="title" class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center">
+    <div class="mx-auto max-w-3xl text-center">
+      <h1 class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent sm:text-6xl">
+        Hello! 
+        <br> 
+        I'm Adrian Rangel
+        <span class="sm:block"> 
+          Web Developer
+        </span>
+      </h1>
+
+      <p class="font-work text-slate-400 sm:text-xl mx-auto mt-4 max-w-xl">
+        I am a web developer who loves the JavaScript ecosystem. 
+        I seek to create software that is sustainable and provides a unique user experience.
+      </p>
+
+      <div class="mt-8 flex flex-wrap justify-center gap-4">
+        <a class="w-fit p-2 text-white font-merriweather font-bold bg-opacity-5 bg-white backdrop-blur-lg drop-shadow-lg text-base lg:text-lg rounded-md duration-300 transition-all hover:scale-105 hover:bg-opacity-10 hover:shadow-sm hover:shadow-purple-300" download href="/docs/cv.jpg">
+          Download CV
+        </a>
+      </div>
+
+    </div>
+  </div>
+
 </section>
+
+<script>
+  import { animate, inView } from 'motion';
+
+  inView('#title', (info) => {
+    animate(info.target, 
+    {opacity:[0, 0.2, 0.4, 0.6, 0.8, 1]},
+    {duration: 2.8})
+  })
+</script>
